--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm"></div>
+        <div class="col-sm"></div>
+      </div>
+    </div>
+
+
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
