--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm"></div>
-        <div class="col-sm"></div>
+        <div class="col-sm">a</div>
+        <div class="col-sm">s</div>
       </div>
     </div>
 
